--- a/package.json
+++ b/package.json
@@ -45,10 +45,15 @@
 		"@tanstack/react-router": "^1.15.7",
 		"@tanstack/react-table": "^8.11.7",
 		"@tanstack/router-vite-plugin": "^1.15.4",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"dayjs": "^1.11.10",
+		"lucide-react": "^0.381.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.49.3",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.22.4",
 		"zustand": "^4.5.0"
 	},
