--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
 		"noPropertyAccessFromIndexSignature": true,
-		"noUncheckedIndexedAccess": true
+		"noUncheckedIndexedAccess": true,
 	},
-	"include": ["src", "e2e"],
-	"references": [{ "path": "./tsconfig.node.json" }]
+	"include": ["src/**/*", "e2e"],
+	"references": [{ "path": "./tsconfig.node.json" }],
 }
