--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@nivo/core": "^0.84.0",
 		"@nivo/line": "^0.84.0",
 		"@nivo/pie": "^0.84.0",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "^5.18.0",
 		"@tanstack/react-router": "^1.15.7",
 		"@tanstack/react-table": "^8.11.7",
@@ -48,6 +49,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"dayjs": "^1.11.10",
+		"embla-carousel-react": "^8.1.3",
 		"lucide-react": "^0.381.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
