--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,7 +53,7 @@
 		"@typescript-eslint/explicit-member-accessibility": "error",
 		"@typescript-eslint/explicit-module-boundary-types": "error",
 		"@typescript-eslint/no-confusing-void-expression": "error",
-		"@typescript-eslint/no-import-type-side-effects": "error",
+		"@typescript-eslint/no-import-type-side-effects": "off",
 		"@typescript-eslint/no-require-imports": "error",
 		"@typescript-eslint/no-unused-vars": "error",
 		"@typescript-eslint/no-useless-empty-export": "error",
