--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
 		"@nivo/core": "^0.84.0",
 		"@nivo/line": "^0.84.0",
 		"@nivo/pie": "^0.84.0",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-progress": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "^5.18.0",
 		"@tanstack/react-router": "^1.15.7",
@@ -48,12 +51,14 @@
 		"@tanstack/router-vite-plugin": "^1.15.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
 		"dayjs": "^1.11.10",
 		"embla-carousel-react": "^8.1.3",
 		"lucide-react": "^0.381.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.49.3",
+		"react-lottie": "^1.2.4",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.22.4",
@@ -85,6 +90,7 @@
 		"@types/node": "^20.11.14",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
+		"@types/react-lottie": "^1.2.10",
 		"@typescript-eslint/eslint-plugin": "^6.20.0",
 		"@typescript-eslint/parser": "^6.20.0",
 		"@vitejs/plugin-react-swc": "^3.6.0",
