--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
 		"@nivo/line": "^0.84.0",
 		"@nivo/pie": "^0.84.0",
 		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-radio-group": "^1.1.3",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "^5.18.0",
 		"@tanstack/react-router": "^1.15.7",
