--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
 		"@tanstack/react-router": "^1.15.7",
 		"@tanstack/react-table": "^8.11.7",
 		"@tanstack/router-vite-plugin": "^1.15.4",
+		"@types/axios": "^0.14.0",
+		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
